# AutoDJ

./: ArrayLib.cpp  ArrayLib.h  ArrayList.cpp  ArrayList.h  CMakeLists.txt  Library.cpp  Library.h  LinkedList.cpp  LinkedList.h  LinkedNode.h  List.h  Playlist.cpp  Playlist.h  PlaylistArrayList.cpp  PlaylistArrayList.h  Song.cpp  Song.h  Songs.txt  Tests.cpp  UserInterface.cpp  library.txt  main.cpp  somesongs.txt  songTests.cpp  songstodelete.txt
